syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc";
option java_outer_classname = "UserProto";

package user;

service UserService {
  rpc SaveUser (UserSaveRequest) returns (UserSaveResponse);
  rpc GetUser (UserGetRequest) returns (UserGetResponse);
}

message UserSaveRequest {
  string name = 1;
}

message UserSaveResponse {
  bool success = 1;
}

message UserGetRequest {
  int32 id = 1;
}

message UserGetResponse {
  string name = 1;
}
